[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elmkit"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "dontwakup", email= "jfwu.ai@gmail.com" }]
dependencies = [
    "openai>=1.99.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["elmkit*"]

[project.urls]
Homepage = "https://github.com/dontwakeup/elmkit"